# shufflonfinder

./: README.md  environment.yml  pyproject.toml
lib/: sample_sheet.py  step_flanking.py  step_gff.py  step_hmmsearch.py  step_ir_cds.py  step_phava.py  step_prokka.py  utils.py
shufflonfinder/: __init__.py  cli.py  sample_sheet.py  step_clinker.py  step_flanking.py  step_gff.py  step_hmmsearch.py  step_ir_cds.py  step_kegg_enrichment.py  step_kofamscan.py  step_phava.py  step_prokka.py  utils.py
