[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shufflonfinder"
version = "0.1.0"
description = "Annotate shufflon structures in bacterial genomes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.80",
    "pandas>=1.5",
]

[project.scripts]
shufflonfinder = "shufflonfinder.cli:main"

[tool.setuptools.packages.find]
include = ["shufflonfinder*"]

[tool.setuptools.package-data]
shufflonfinder = ["hmms/*.hmm.gz", "hmms/*.hmm"]
